[gd_scene load_steps=7 format=2]

[ext_resource path="res://computer/computer.png" type="Texture" id=1]
[ext_resource path="res://computer/computer.gd" type="Script" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://computer/computer.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 22.5 )

[node name="Computer" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.1, 1.1, 1.1, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -17.0
margin_top = -17.0
margin_right = 18.633
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
autowrap = true
clip_text = true

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 3.5
autoplay = true
max_distance = 800.0
attenuation = 8.0

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
